# hm-playground

./: LICENSE  hm-playground.cabal  parser.hs
HM/: Recursion.hs
HM/Infer/: Types.hs
HM/Simple/: AST.hs  Infer.hs  Parser.hs
